[package]
name = "evsieve"
version = "1.4.0"
authors = ["Kars Mulder <devmail@karsmulder.nl>"]
edition = "2018"
keywords = ["evdev"]
categories = ["command-line-utilities"]
links = "evdev"
rust-version = "1.59"

# The following "license = " key includes licenses from some dependencies, even if no code
# from those dependencies is on this repository. See the COPYING file for more detailed information.
#
# Most of this program is (compatible with) GPL-2.0-or-later, but I'm not a lawyer and
# I am unable to determine whether or not this program is legally a derivative work of the
# Linux kernel, so I'm marking the license conservatively in Cargo.toml. If you wish to
# redistribute this program under GPLv3+, you should do your own legal research on whether
# that is possible.
license = "GPL-2.0-or-later AND MIT AND GPL-2.0-only WITH Linux-syscall-note"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
libc = "0.2.169"

[profile.release]
panic = "unwind"
lto = true

# Warning: optional features are experimental and not subject to stability guarantees,
# i.e. they may work different or not be available on future evsieve versions.
[features]
# If enabled, evsieve will link against libsystemd. If not, it will fall back on systemd-notify.
systemd = []
# If enabled, evsieve will partially autogenerate EV_MSC events sent to output devices.
auto-scan = []
